--- a/Css files/Style.css
+++ b/Css files/Style.css
@@ -16,10 +16,6 @@ body::before {
     left: 0;
     width: 100%;
     height: 100%;
-    /* Adjust opacity as needed */
-    opacity: 0.7;
-    /* Background image */
-    /*background-image: url("../Images/WhatsApp\ Image\ 2024-03-28\ at\ 17.49.16.jpeg");*/
     background-size: 98% 95%;
     background-position: center;
     transform: scaleX(-1);
@@ -108,15 +104,7 @@ nav {
     pointer-events: auto;
     transform: translate(-50%, -50%) scale(1);
   }
-  .form_close {
-    position: absolute;
-    top: 10px;
-    right: 20px;
-    color: #0b0217;
-    font-size: 22px;
-    opacity: 0.7;
-    cursor: pointer;
-  }
+
   .form_container h2 {
     font-size: 22px;
     color: #0b0217;
@@ -210,7 +198,7 @@ nav {
     background: #fff;
     padding: 25px;
     border-radius: 12px;
-    box-shadow: rgba(0, 0, 0, 0.1);
+    box-shadow: 0 0 0 5px white, 0 0 0 8px #7c7b7b;
     opacity: 0;
     pointer-events: none;
     transition: all 0.4s ease-out;
