--- a/Css files/Style.css
+++ b/Css files/Style.css
@@ -1,5 +1,6 @@
 
-@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap");/***body****/
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap");
+/***body****/
 body {
     place-items: center;
     height: 100vh;
